--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "prop-types": "^15.6.0",
-    "react": "16.0.0",
-    "react-native": "0.51.0"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
