--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
-  "dependencies": {
-    "prop-types": "^15.6.0"
+  "peerDependencies": {
+    "prop-types": "^15.6.0",
+    "react": "16.0.0",
+    "react-native": "0.51.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
