--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  },
   "peerDependencies": {
-    "prop-types": "^15.6.0",
-    "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
